<resources>
    <string name="app_name">Cooperator-app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_app">Co-operator</string>
    <string name="password">Password</string>
    <string name="E_mail">E-mail</string>
    <string name="email_address">email address</string>
    <string name="login">login</string>
    <string name="Events">Events</string>
    <string name="Coopterms">Coopterms</string>
    <string name="action_settings">Settings</string>
    <string name="newperson_hint">Who?</string>
    <string name="newperson_hint1">First Name</string>
    <string name="newperson_hint2">Last Name?</string>
    <string name="newperson_button">Add Person</string>
    <string name="newemployer_button">Add Employer</string>
    <string name="newevent_date_label">Date?</string>
    <string name="personspinner_label">Person?</string>
    <string name="eventspinner_label">Event?</string>
    <string name="starttime_label">Start time?</string>
    <string name="newevent_date_first">01-07-2019</string>
    <string name="starttime_first">10:00</string>
    <string name="newevent_button">Add Event</string>
    <string name="newevent_hint">Coop name?</string>
    <string name="endtime_label">End time?</string>
    <string name="endtime_first">11:00</string>
    <string name="register_button">Register</string>
    <string name="refresh_button">Refresh Lists</string>
</resources>
